--- a/ARIMA_model.ipynb
+++ b/ARIMA_model.ipynb
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-23T06:28:34.835958100Z",
-     "start_time": "2024-01-23T06:28:34.813539200Z"
+     "end_time": "2024-01-27T02:26:19.105178600Z",
+     "start_time": "2024-01-27T02:26:18.973895400Z"
     }
    },
    "outputs": [
@@ -62,12 +62,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-23T06:38:08.396608Z",
-     "start_time": "2024-01-23T06:38:07.843661800Z"
+     "end_time": "2024-01-27T02:26:19.134308300Z",
+     "start_time": "2024-01-27T02:26:19.115862200Z"
     }
    },
    "id": "38839341edd4419b",
-   "execution_count": 5
+   "execution_count": 14
   },
   {
    "cell_type": "code",
@@ -76,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train score: 1.0, test score: 0.672514619883041\n"
+      "train score: 1.0, test score: 0.6023391812865497\n"
      ]
     }
    ],
@@ -92,12 +92,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-23T06:41:07.637055800Z",
-     "start_time": "2024-01-23T06:41:07.018485700Z"
+     "end_time": "2024-01-27T02:26:19.249563200Z",
+     "start_time": "2024-01-27T02:26:19.125880900Z"
     }
    },
    "id": "660e5ef848fadd99",
-   "execution_count": 6
+   "execution_count": 15
   },
   {
    "cell_type": "code",
@@ -156,12 +156,206 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-23T06:42:31.535401500Z",
-     "start_time": "2024-01-23T06:42:29.343559100Z"
+     "end_time": "2024-01-27T02:26:23.252160600Z",
+     "start_time": "2024-01-27T02:26:19.233164500Z"
     }
    },
    "id": "5655d98507b1c0f9",
-   "execution_count": 8
+   "execution_count": 16
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9d2364f3c7b6bee1"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import datasets,svm,metrics\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "iris = datasets.load_iris()\n",
+    "x=iris.data\n",
+    "y=iris.target\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y,train_size=0.8)\n",
+    "print(iris.feature_names)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T02:26:23.262707100Z",
+     "start_time": "2024-01-27T02:26:23.255568700Z"
+    }
+   },
+   "id": "18bbeaf74c627ffd",
+   "execution_count": 17
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2c3d7af1815e2383"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T02:26:23.275543600Z",
+     "start_time": "2024-01-27T02:26:23.265967600Z"
+    }
+   },
+   "id": "c3df7bc3266bcb7d",
+   "execution_count": 18
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "训练的分数为：1.0\n",
+      "{'C': 10, 'kernel': 'rbf'}\n",
+      "预测准确率为:1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters={'kernel':('linear','rbf'),'C':[1,10,15]}\n",
+    "svc=svm.SVC(gamma='scale')\n",
+    "clf=GridSearchCV(svc,parameters,cv=5)\n",
+    "clf.fit(x_train,y_train)\n",
+    "print(f'训练的分数为：{clf.score(x_test,y_test)}')\n",
+    "print(clf.best_params_)\n",
+    "y_predict=clf.predict(x_test)\n",
+    "print(f\"预测准确率为:{metrics.accuracy_score(y_test, y_predict)}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T02:26:23.530192100Z",
+     "start_time": "2024-01-27T02:26:23.281285100Z"
+    }
+   },
+   "id": "a02f44479fce8164",
+   "execution_count": 19
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 云南钾钠盐分类问题"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8a076016b28a3142"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "GridSearchCV(cv=5, estimator=SVC(),\n             param_grid={'C': [1, 10, 15, 100], 'kernel': ('linear', 'rbf')})",
+      "text/html": "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GridSearchCV(cv=5, estimator=SVC(),\n             param_grid={&#x27;C&#x27;: [1, 10, 15, 100], &#x27;kernel&#x27;: (&#x27;linear&#x27;, &#x27;rbf&#x27;)})</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GridSearchCV</label><div class=\"sk-toggleable__content\"><pre>GridSearchCV(cv=5, estimator=SVC(),\n             param_grid={&#x27;C&#x27;: [1, 10, 15, 100], &#x27;kernel&#x27;: (&#x27;linear&#x27;, &#x27;rbf&#x27;)})</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: SVC</label><div class=\"sk-toggleable__content\"><pre>SVC()</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SVC</label><div class=\"sk-toggleable__content\"><pre>SVC()</pre></div></div></div></div></div></div></div></div></div></div>"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x_train_neo=np.array([[13.85,2.79,7.8,49.6],[22.31,4.67,12.31,47.8],[28.82,4.63,16.18,62.15],[15.29,3.54,7.58,43.2],[28.29,4.9,16.12,58.7],\n",
+    "                  [2.18,1.06,1.22,20.6],[3.85,0.8,4.06,47.1],[11.4,0,3.5,0],[3.66,2.42,2.14,15.1],[12.1,0,5.68,0]\n",
+    "                  ])\n",
+    "y_train_neo=np.array([1,1,1,1,1,0,0,0,0,0])\n",
+    "svc=svm.SVC(gamma='scale')\n",
+    "params={'kernel':('linear','rbf'),'C':[1,10,15,100]}\n",
+    "clf=GridSearchCV(svc,params,cv=5)\n",
+    "clf.fit(x_train_neo,y_train_neo)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T02:26:23.531244Z",
+     "start_time": "2024-01-27T02:26:23.377677500Z"
+    }
+   },
+   "id": "4b1b7fa2c4a92dd8",
+   "execution_count": 20
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(array([0, 1, 1, 0, 0, 0]), {'C': 1, 'kernel': 'linear'})"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test_neo=np.array([[8.85,3.38,5.17,26.1],\n",
+    "                     [28.6,2.4,1.2,127],\n",
+    "                     [20.7,6.7,7.6,30.8],\n",
+    "                     [7.9,2.4,4.3,33.2],\n",
+    "                     [3.19,3.2,1.43,9.9],\n",
+    "                     [12.4,5.1,4.48,24.6]])\n",
+    "y_pred_neo=clf.predict(x_test_neo)\n",
+    "y_pred_neo,clf.best_params_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T02:26:23.531244Z",
+     "start_time": "2024-01-27T02:26:23.459392500Z"
+    }
+   },
+   "id": "a241b776126c9344",
+   "execution_count": 21
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "根据结果可以认为，上述数据中，第二第三个为钾盐，其余为钠盐"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7235f5042d7159ab"
   }
  ],
  "metadata": {
